style: Finally! Spacing woes solved

--- a/src/dashboard/static/index.css
+++ b/src/dashboard/static/index.css
@@ -4,11 +4,13 @@ html,
 body {
   background: #f5f6fa;
   min-height: 100vh;
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body {
+body,
+.preface,
+.docs {
   display: flex;
   flex-direction: column;
 }
@@ -34,6 +36,18 @@ ol > li {
   padding-left: 0.4rem;
 }
 
+.tabs.is-boxed li.is-active a {
+  background-color: #f5f6fa;
+}
+
+.tabs a {
+  color: #7a7a7a;
+}
+
+.tabs.is-boxed a:hover {
+  background-color: #dbdbdb50;
+}
+
 .columns {
   display: flex;
   flex: 1;
@@ -56,32 +70,61 @@ ol > li {
 
 @media screen and (min-width: 1024px) {
   .preface {
-    margin-right: 5rem;
+    margin-right: 3rem;
     flex: 0.5;
   }
 }
 
 @media screen and (min-width: 1400px) {
   .preface {
-    margin-right: 7rem;
+    margin-right: 3rem;
     flex: 0.8;
   }
 }
 
-.logs {
+.docs {
   flex: 1;
+  min-height: 25vh;
+}
+
+.logs {
+  max-height: 100%;
+  flex: 1 0 0;
   font-size: 0.7rem;
   font-family: "Roboto Mono", "Courier New", Courier, monospace;
-  padding: 1rem 0.75rem;
   line-height: 1.2;
-  background: #3c3c3c;
-  color: white;
-  border-radius: 6px;
-  max-height: min(40vh, 300px);
-  overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  overflow-y: scroll;
 }
+.preface::after {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(245, 246, 250, 1) 100%);
+  content: "";
+  pointer-events: none;
+}
+/* .logs::-webkit-scrollbar,
+.logs::-webkit-scrollbar-thumb {
+  display: none;
+} */
+
+.logs::-webkit-scrollbar {
+  background: transparent;
+  height: 0.5rem;
+  width: 0.5rem;
+}
+
+.logs::-webkit-scrollbar-thumb {
+  background-color: #dbdbdb50;
+  border-radius: 1px;
+  overflow: hidden;
+}
+.logs::-webkit-scrollbar-track {
+  overflow: hidden;
+}
+
 .logs .step {
   color: #ffd580;
 }
